auth-service/src/main/java/com/example/authservice/error/handle/ResponseMessage.java
package com.example.authservice.error.handle;

public class ResponseMessage extends Throwable {
    private String message;

    public ResponseMessage() {
    }

    public ResponseMessage(String message) {
        this.message = message;
    }

    public String getMessage() {
        return message;
    }

    public void setMessage(String message) {
        this.message = message;
    }
}
